--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
         pytest
     - name: Lint with Pylint
       run:   
-        pyli   ./utils.py
+        pylint ./utils.py
     - name: Format with Black
       run:   
         black --check .
